--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "ingegneria-soft",
+  "name": "ricerca-libri",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "server": "npx tsc --resolveJsonModule --esModuleInterop ./src/server/server.ts && node ./src/server/server.js"
   },
   "private": true,
   "dependencies": {
@@ -20,7 +21,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -39,5 +40,20 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.4.3"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.0.4.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EmilyWasu/ingegneriaSoft.git"
+  },
+  "keywords": [
+    "ricerca_libri"
+  ],
+  "author": "Enrico",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/EmilyWasu/ingegneriaSoft/issues"
+  },
+  "homepage": "https://github.com/EmilyWasu/ingegneriaSoft#readme"
 }
