--- a/angular.json
+++ b/angular.json
@@ -83,7 +83,8 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ingegneriaSoft:build"
+            "browserTarget": "ingegneriaSoft:build",
+            "proxyConfig": "src/proxy.conf.json"
           }
         },
         "test": {
