--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "npx tsc --resolveJsonModule --esModuleInterop ./src/server/server.ts && node ./src/server/server.js"
+    "server": "npx tsc --resolveJsonModule --esModuleInterop ./src/server/server.ts && node ./src/server/server.js",
+    "dev": "concurrently -k \"npm run start \" \"npm run server\""
   },
   "private": true,
   "dependencies": {
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -33,6 +35,7 @@
     "@types/express": "^4.17.13",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "concurrently": "^6.5.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
