--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "server": "npx tsc --resolveJsonModule --esModuleInterop ./src/server/server.ts && node ./src/server/server.js",
+    "server": "npx tsc --resolveJsonModule --esModuleInterop ./src/server/server.ts ./src/server/app.ts && node ./src/server/app.js",
     "dev": "npm install && concurrently -k \"npm run start \" \"npm run server\""
   },
   "private": true,
@@ -22,9 +22,11 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@types/supertest": "^2.0.11",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "rxjs": "~7.4.0",
+    "supertest": "^6.1.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -33,15 +35,16 @@
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
     "@types/express": "^4.17.13",
-    "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "concurrently": "^6.5.1",
     "jasmine-core": "~3.10.0",
+    "jest": "^27.4.5",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ts-jest": "^27.1.2",
     "typescript": "~4.4.3"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 13.0.4.",
