--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "server": "npx tsc --resolveJsonModule --esModuleInterop ./src/server/server.ts ./src/server/app.ts && node ./src/server/app.js",
-    "dev": "npm install && concurrently -k \"npm run start \" \"npm run server\""
+    "dev": "npm install && concurrently -k \"npm run start \" \"npm run server\"",
+    "test:api": "jest ./src/__test__/ricerca.test.ts"
   },
   "private": true,
   "dependencies": {
